recieved feedback on some styling issues. Fixed icons being too light. Fixed font sizing in several block elements.

--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,10 +1,11 @@
 .page {
-    background-color: #FCF5E5;
-    font-family: "Poppins", Arial, Helvetica, sans-serif;
-    min-height: 100vh;
+	background-color: #fcf5e5;
+    color: #212121;
+	font-family: "Poppins", Arial, Helvetica, sans-serif;
+	min-height: 100vh;
 }
 
 .page__section {
-    max-width: 1280px;
-    margin: 0 auto;
+	max-width: 1280px;
+	margin: 0 auto;
 }
